# memtop

./: Cargo.toml  README.md  justfile
src/: app.rs  event_loop.rs  main.rs
src/info/: mod.rs
src/info/linux/: mod.rs  system_usage.rs  system_usage_info.rs
src/info/linux/process/: mod.rs  process_list.rs  process_tree.rs  smaps_rollup.rs
src/info/shared/: mod.rs  system_usage.rs  system_usage_info.rs
src/tui/: mod.rs  ui.rs
src/tui/panes/: mod.rs  process_list_pane.rs  process_tree_pane.rs  system_usage_info_pane.rs  system_usage_pane.rs
src/tui/tabs/: mod.rs  process_list_tab.rs
src/tui/widgets/: mod.rs  selectable_table.rs  table.rs
